Main content, Speakers and Conference

--- a/index.html
+++ b/index.html
@@ -67,16 +67,91 @@
                                 estudiantes de Platzi y a los oradores de primer nivel que tenemos
                                 para ti. Te esperamos!
                             </p>
-                            <a href="#">Quiero ser orador</a>
-                            <button type="button">Comprar Tickets</button>
+                            <a href="#" class="btn btn-outline-light">Quiero ser orador</a>
+                            <button type="button" class="btn btn-platzi">Comprar Tickets</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
       </main>
-    
     <!-- Main -->
+    <!-- Speakers -->
+      <section id="speakers" class="mt-4">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 mb-4 col-xs-10 col-sm-6 col-xl-3">
+              <div class="card">
+                <img src="./assets/speakers/sacha.jpg" class="card-img-top" alt="sacha">
+                <div class="card-body">
+                  <div class="badges">
+                    <span class="badge text-bg-warning">JavaScript</span>
+                    <span class="badge text-bg-info">ReactJS</span>
+                  </div>
+                  <h5 class="card-title">Sacha Lifszyc</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-4 col-xs-10 col-sm-6 col-xl-3">
+              <div class="card">
+                <img src="./assets/speakers/leonidas2.jpeg" class="card-img-top" alt="leonidas">
+                <div class="card-body">
+                  <div class="badges">
+                    <span class="badge text-bg-warning">JavaScript</span>
+                    <span class="badge text-bg-info">VueJS</span>
+                  </div>
+                  <h5 class="card-title">Leonidas Esteban</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-4 col-xs-10 col-sm-6 col-xl-3">
+              <div class="card">
+                <img src="./assets/speakers/freddy.jpeg" class="card-img-top" alt="freddy">
+                <div class="card-body">
+                  <div class="badges">
+                    <span class="badge text-bg-warning">Frontend</span>
+                    <span class="badge text-bg-info">HTML and CSS</span>
+                  </div>
+                  <h5 class="card-title">Freddy Vega</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-4 col-xs-10 col-sm-6 col-xl-3">
+              <div class="card">
+                <img src="./assets/speakers/cvander.jpeg" class="card-img-top" alt="cvander">
+                <div class="card-body">
+                  <div class="badges">
+                    <span class="badge text-bg-warning">Backend</span>
+                    <span class="badge text-bg-info">PHP</span>
+                  </div>
+                  <h5 class="card-title">Christian Van der H.</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    <!-- Speakers -->
+    <!-- Lugar y Fecha -->
+    <section id="place-time">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 col-lg-6 col-xl-6 px-0">
+            <img src="./assets/honolulu.jpg" alt="Isla de Honolulu">
+          </div>
+          <div class="col-12 col-lg-6 col-xl-6 py-4">
+            <h2>Honolulu - Octubre 2025</h2>
+            <p>Honolulu es la capital y localidad más grande del estado de Hawái, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses.</p>
+            <a href="https://es.wikipedia.org/wiki/Honolulu" class="btn btn-outline-light">Conoce más</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Lugar y Fecha -->
     <!-- Footer -->
     <footer id="footer" class="pb-4 pt-4">
         <div class="container">
